tests/agl/rejections/type/is_on_non_enum.agl
enum R
  | Pass
let n = 1
n is Pass
